--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://thepawansharma.github.io/school-management",
   "name": "school-management",
   "version": "0.1.0",
   "private": true,
@@ -15,6 +14,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
